# QTMock

./: .gitignore  CMakeLists.txt  README.md  build.sh  client.qml  run.sh
apps/climate/: info.yaml
apps/dashboard/: info.yaml
apps/media/: info.yaml
native/: CMakeLists.txt
native/climate/: CMakeLists.txt  Main.qml  main.cpp
native/dashboard/: CMakeLists.txt  Main.qml  main.cpp
native/media/: CMakeLists.txt  Main.qml  main.cpp
system-ui/: main.qml
